unpackaged/main/default/objects/AuditLogEntry__c/AuditLogEntry__c.object-meta.xml
<CustomObject>
    <description>An audit log of key events that occur in the org.</description>
    <label>Audit Log Entry</label>
    <nameField>
        <displayFormat>ALE-{0}</displayFormat>
        <label>Audit Log Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Log Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>