unpackaged/main/default/objects/AuditLogEntry__c/fields/OW_prior_value__c.field-meta.xml
<CustomField>
    <fullName>OW_prior_value__c</fullName>
    <description>The prior value of the field should be captured here.</description>
    <label>Prior value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>