unpackaged/main/default/objects/AuditLogEntry__c/fields/RecordName__c.field-meta.xml
<CustomField>
    <fullName>RecordName__c</fullName>
    <label>Record Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>