unpackaged/main/default/objects/AuditLogEntry__c/fields/RecordObject__c.field-meta.xml
<CustomField>
    <fullName>RecordObject__c</fullName>
    <description>The name to which this audit log entry relates.</description>
    <label>Record Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>