unpackaged/main/default/objects/AuditLogEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RecordObject__c</columns>
    <columns>RecordId__c</columns>
    <columns>EventDate__c</columns>
    <columns>EventType__c</columns>
    <columns>RecordName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UserId__c</columns>
    <columns>UserName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>